--- a/packages/live-graph/src/components/runtime.scss
+++ b/packages/live-graph/src/components/runtime.scss
@@ -66,6 +66,7 @@
   position: relative;
   flex: 1;
   min-height: 0;
+  padding-bottom: 4px;
   user-select: none;
 }
 
